--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,12 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "pm2:start": "pm2 start server.js --name john-memory-backend",
+    "pm2:stop": "pm2 stop john-memory-backend",
+    "pm2:restart": "pm2 restart john-memory-backend",
+    "pm2:status": "pm2 status",
+    "pm2:logs": "pm2 logs john-memory-backend"
   },
   "dependencies": {
     "express": "^4.18.2",
