--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,9 @@
     "pm2:logs": "pm2 logs john-memory-backend"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "sqlite3": "^5.1.6"
+    "express": "^4.18.2",
+    "mysql2": "^3.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
